<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTint="#2C2C2C"
    android:backgroundTintMode="multiply"
    tools:context=".UI.Help.HelpActivity">

    <TextView
        android:id="@+id/help_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:text="@string/Team_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_authors"
        android:layout_width="379sp"
        android:layout_height="wrap_content"
        android:text="@string/Authors_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_team_name" />

    <TextView
        android:id="@+id/help_CMPT276_link"
        android:layout_width="92sp"
        android:layout_height="28sp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84sp"
        android:text="@string/link"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#69B5FF"
        app:layout_constraintStart_toStartOf="@+id/help_authors"
        app:layout_constraintTop_toTopOf="@+id/help_authors" />

    <TextView
        android:id="@+id/help_authors2"
        android:layout_width="wrap_content"
        android:layout_height="28sp"
        android:layout_marginStart="3sp"
        android:layout_marginTop="84sp"
        android:text="@string/Authors_text2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/help_CMPT276_link"
        app:layout_constraintTop_toTopOf="@+id/help_authors" />


    <TextView
        android:id="@+id/copyright_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Copyright_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_authors" />

    <TextView
        android:id="@+id/help_CR_main_background"
        android:layout_width="379sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Main_Background"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyright_title" />


</androidx.constraintlayout.widget.ConstraintLayout>